--- a/views/about.hbs
+++ b/views/about.hbs
@@ -126,7 +126,11 @@
                     <h3 class="ui header" style="color: #00AEEF">Abouchen, Mourad</h3>
                 </div>
                 <div class="eight wide column" style="border-left: 1px solid #00AEEF">
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis</p>
+                    <p>My name is Mourad Abouhcen. I am 17 years old and i live in Amsterdam. 
+                    I study software engineering at de Hogeschool van Amsterdam and am now in my first year.
+                    I like programming because you can make things like programs and websites from nothing. 
+                    <br><br>
+                    I think our solution for traffic is a good solution and i can definitely see our idea grow in the future to something with even more functionalities.</p>
                 </div>
             </div>
         </div>
