--- a/views/homepage.hbs
+++ b/views/homepage.hbs
@@ -153,7 +153,7 @@
       <div class="row">
         <div class="eight wide column">
           <h3 class="ui header" style="color: #00AEEF">Pulse</h3>
-          <p>A car tracking platform that monitors traffic by detecting every car on road.......</p>
+          <p>A car tracking platform that monitors traffic by detecting every car on the road. </p>
         </div>
         <div class="six wide right floated column">
           <img src="/images/banner.jpg" class="ui large bordered rounded image">
@@ -174,20 +174,20 @@
     <div class="ui equal width stackable internally celled grid">
       <div class="center aligned row">
         <div class="column" style="background-color: white;" id="customColumn">
-          <h3 style="color: #00AEEF;">Live Car Detection.</h3>
-          <p style="color: #363945;">Track cars live on every road in your region. </p>
+          <h3 style="color: #00AEEF;">Live Car Detection</h3>
+          <p style="color: #363945;">Track cars live on every road in your region </p>
         </div>
         <div class="column" style="background-color: #00AEEF;" id="customColumn">
-          <h3 style="color: white;">Lorem ipsum.</h3>
-          <p style="color: #363945;">Track cars live on every road in your region. </p>
+          <h3 style="color: white;">Traffic Statistics</h3>
+          <p style="color: #363945;">Statistics on vehicles, engine types, and more</p>
         </div>
         <div class="column" style="background-color: white;" id="customColumn">
-          <h3 style="color: #00AEEF;">Lorem ipsum.</h3>
-          <p style="color: #363945;">Track cars live on every road in your region. </p>
+          <h3 style="color: #00AEEF;">Daily Map</h3>
+          <p style="color: #363945;">New map everyday because of daily satellite pictures</p>
         </div>
         <div class="column" style="background-color: #00AEEF;" id="customColumn">
-          <h3 style="color: white;">Lorem ipsum</h3>
-          <p style="color: #363945;">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis </p>
+          <h3 style="color: white;">Stay Tuned</h3>
+          <p style="color: #363945;">More features coming...</p>
         </div>
       </div>
     </div>
