--- a/views/solution.hbs
+++ b/views/solution.hbs
@@ -160,19 +160,22 @@
       <div class="row">
         <div class="eight wide column" style="border-right: 1px solid #00AEEF">
           <h3 class="ui header" style="color: #00AEEF">Problem</h3>
-          <p>In Nederland maakt bijna elke persoon gebruik van het verkeer. Daarvan zijn er heel veel mensen die gebruik maken van auto’s. Ondanks de goede infrastructuur in Nederland vinden er verschillende problemen plaats die een negatief gevolg hebben
-            op het verkeer.</p><br>
-          <p>Neem als voorbeeld:
-            <li>Auto-ongelukken</li>
-            <li>Files</li>
-            <li>Slechte wegenstructuur</li>
-            <li>Negatieve klimaat</li>
-            <li>CO2-uitstoot</li>
+          <p>Almost every person is a part of traffic in the Netherlands. 
+            A lot of these people go very often by car. 
+            And despite the good infrastructure, 
+            a lot of problems still take place which have negative consequences on traffic.</p><br>
+          <p>For instance:
+            <li>Car accidents</li>
+            <li>Traffic jams</li>
+            <li>Bad road structure</li>
+            <li>Bad climate</li>
+            <li>CO2-emissions</li>
             <br><br>
-            <p>De bovenstaande problemen vinden dagelijks plaats in het verkeer, daarom is het handig om het allemaal te monitoren, zodat er verschillende oplossingen bedacht kunnen worden om het probleem op te lossen.</p>
-            <br>
-            <p>Ons product geeft de mogelijkheid om de bovenstaande problemen op te lossen. Hieronder leggen we tot in het detail uit wat het product inhoudt.</p>
-
+            <p>All of the problems above take place almost daily and
+              that is why it's useful to monitor it all. 
+              This way we can keep track and combat problems before they grow too big.
+            </p>
+            
         </div>
         <div class="six wide right floated column">
         </div>
@@ -187,10 +190,16 @@
         </div>
         <div class="eight wide column" style="border-left: 1px solid #00AEEF">
           <h3 class="ui header" style="color: #00AEEF">Solution</h3>
-          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.
-            Aenean massa. Cum sociis natoque penatibus et magnis dis Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis Lorem ipsum dolor sit amet, consectetuer
-            adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus
-            et magnis dis</p>
+          <p>Our solution to the many problems of traffic is Pulse. 
+            Pulse is a traffic monitoring system. 
+            We scan all kinds of vehicles through out the day on all the intersections in the Netherlands.
+            <br><br>
+            By scanning the license plates we can make out a lot of patterns in traffic.
+            For instance, you see the amount of cars counted dropping when it is raining, 
+            but the amount of counted trucks stay the same.
+            <br>
+            You can find these patterns on our dashboard which is also our statistics page.
+          </p>
         </div>
       </div>
     </div>
