--- a/views/support.hbs
+++ b/views/support.hbs
@@ -129,22 +129,19 @@
                         <div class="four wide column">
                             <div class="ui vertical fluid tabular menu">
                                 <a class="item">
-                                    Lorem ipsum
+                                    How do you scan the vehicles?
                                 </a>
                                 <a class="item">
-                                    Lorem ipsum
+                                    How do you get all the data from just the license plates?
                                 </a>
                                 <a class="item active">
-                                    Lorem ipsum
-                                </a>
-                                <a class="item">
-                                    Lorem ipsum
+                                    What are the costs of an account?
                                 </a>
                             </div>
                         </div>
                         <div class="twelve wide stretched column">
                             <div class="ui segment">
-                                Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis
+                                None. Making an account and making use of our system is completely free.
                             </div>
                         </div>
                     </div>
