--- a/views/reset.hbs
+++ b/views/reset.hbs
@@ -8,7 +8,7 @@
 
 </head>
 <body>
-    <form class="ui large form" method="post" action="/users/reset/<%= token %>">
+    <form class="ui large form" method="post" >
         <div class="ui container">
             <div class="form-group">
                 <label for="password">New Password</label>
