--- a/views/login.hbs
+++ b/views/login.hbs
@@ -103,6 +103,9 @@
     <div class="ui message">
       New to Pulse? <a href="register">Sign Up Now!</a>
     </div>
+      <div class="ui message">
+          Forgot your password? <a href="forgot">Reset it</a>
+      </div>
   </div>
 </div>
 
