--- a/views/reset.hbs
+++ b/views/reset.hbs
@@ -5,24 +5,90 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
     <title>reset</title>
+    <style>
+        body > .grid {
+            height: 100%;
+        }
+        .image {
+            margin-top: -100px;
+        }
+        .column {
+            max-width: 450px;
+        }
+        #video-bg-elem {
+            position: absolute;
+            top: 0;
+            left: 0;
+            min-height: 100%;
+            min-width: 100%;
+        }
 
+    </style>
+    <script>
+        $(document)
+                .ready(function() {
+                    $('.ui.form')
+                            .form({
+                                fields: {
+                                    password: {
+                                        identifier  : 'password',
+                                        rules: [
+                                            {
+                                                type   : 'empty',
+                                                prompt : 'Please enter a new password'
+                                            }
+                                        ]
+                                    }
+                                }
+                            })
+                    ;
+                })
+        ;
+    </script>
 </head>
 <body>
+<div class="background-wrap">
+    <video id="video-bg-elem" preload="auto" autoplay="true" loop="loop" muted="muted">
+        <source src="/video/background.mp4" type="video/mp4">
+        Sorry That The Amazing video Is Not Supported Please Contact us and tell us which operating system or which browser you use Sorry!
+    </video>
+</div>
+<div class="ui middle aligned center aligned grid">
+    <div class="column">
+        <div class="content">
+            <div class="ui small image">
+                <img src="/images/pulselogo.png">
+            </div>
+        </div>
+        <div class="ui inverted image header">
+            <div class="content">
+                <h2>Reset your password</h2>
+            </div>
+        </div>
     <form class="ui large form" method="post" >
-        <div class="ui container">
-            <div class="form-group">
-                <label for="password">New Password</label>
-                <input type="password" name="password" value="" placeholder="New password" autofocus="autofocus" class="form-control"/>
+        <div class="ui stacked segment">
+            <div class="field">
+                <div class="form-group">
+                    <div class="ui left icon input">
+                        <i class="lock icon"></i>
+                        <input type="password" name="password" placeholder="New Password">
+                    </div>
+                </div>
             </div>
-            <div class="form-group">
-                <label for="confirm">Confirm Password</label>
-                <input type="password" name="confirm" value="" placeholder="Confirm password" class="form-control"/>
+            <div class="field">
+                <div class="form-group">
+                    <div class="ui left icon input">
+                    <i class="lock icon"></i>
+                    <input type="password" name="confirm" placeholder="Confirm Password">
+                    </div>
+                </div>
             </div>
-            <div class="form-group">
-                <button type="submit" class="btn btn-primary">Update Password</button>
-            </div>
-        </form>
+        </div>
+        <div class="form-group">
+            <div class="ui fluid large blue submit button">Reset</div>
+        </div>
+    </form>
     </div>
-<script></script>
+</div>
 </body>
 </html>
