about Ziggy Veerman

--- a/views/about.hbs
+++ b/views/about.hbs
@@ -184,7 +184,15 @@
                     <h3 class="ui header" style="color: #00AEEF">Veerman, Ziggy</h3>
                 </div>
                 <div class="eight wide column" style="border-left: 1px solid #00AEEF">
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis</p>
+                    <p>
+                    My name is Ziggy Veerman. I am 18 years old and study Software engineering at the university of applied science located in amsterdam.
+                    </p>
+                    <p>
+                    During the development of the Pulse system, I enjoyed watching the application grow. At it's current state, It has even more functions then we intended to build.
+                    </p>
+                    <p>
+                    So I think we are looking at a bright future concerning Pulse. The system we are building is a great solution to the problem Planet encountered.
+                    </p>
                 </div>
             </div>
         </div>
