added temparature and cleaned up settings page

--- a/views/map.hbs
+++ b/views/map.hbs
@@ -58,7 +58,7 @@
     var cLayer = '';
     $('.ui.dropdown')
             .dropdown();
-    
+
     $(function(){
         $('.item.map').click(function (){
             cLayer=this.id;
@@ -109,6 +109,10 @@
                     <p style="display:inline" id="test"><b>TEMP AMOUNT</b></p>
 
             </div>
+            <div class="content">
+              Current temperature in celsius
+                  <p style="display:inline" id="temp"><b>TEMP AMOUNT</b></p>
+          </div>
           </div>
         </div>
 
