added comments and some fixes

--- a/views/layout_homepage.hbs
+++ b/views/layout_homepage.hbs
@@ -18,7 +18,7 @@
         <img class="logo" id="logo" src="/images/pulse_banner_icon.png">
         <p>Pulse </p>
       </a>
-      <a class="item" href="/">
+      <a class="item" href="/homepage">
     Home
   </a>
       <a class="item" href="/solution">
