--- a/views/settings.hbs
+++ b/views/settings.hbs
@@ -15,44 +15,38 @@
             margin-left: 10%;
         }
         .input {
-
             text-align: right;
             float: right;
             clear: right;
             width: 250px;
-
-
-        }
-        #popup {
-            width:160px;
-            height:80px;
-            padding:20px;
-            background-color:gray;
-            position:absolute;
-            top:100px;
-            left:100px;
-            display:none;
         }
         #edit{
             float: right;
             clear: right;
             width: 250px;
-            margin-top: 50%;
-
         }
 
 
 
     </style>
+    <style media="screen">
+        #settings{
+            margin-top: 100px;
+        }
+
+    </style>
+
+    <script>
+
+    </script>
 
 </head>
 
 <body>
 
 <div class="ui grid">
-
+    <form class="ui large form" method="post" action="/users/settings">
     <div class="twelve wide stretched column">
-      <center>
         <h1 class="ui header" id="titel"><i class="wrench icon"></i>Settings</h1></center>
 
         <div class="ui container" id = "settings">
@@ -63,46 +57,25 @@
             <p></p>
             <label>E-mail</label>
             <div class="ui input">
-                <input type="text" name="Password" value="{{Email}}">
+                <input type="text" name="email" value="{{Email}}">
             </div>
             <p></p>
             <label>Password</label>
             <div class="ui input">
-                <input type="password" name="Password" value="{{Password}}">
+                <input type="password" name="password" value="{{Password}}">
             </div>
             <p></p>
             <label>Township</label>
-            <div class="ui input">
-                <input type="text" name="Township" value="{{Township}}">
+                <div class="ui input">
+                <input type="text" name="township" value="{{Township}}">
+                </div>
             <p></p>
+                <button class="ui blue submit button" id="edit">Edit</button>
+                </div>
         </div>
-        <div class="ui right  container" id = "button">
-            <button type="submit" class="ui blue submit button" id="edit">Edit</button>
-        </div>
+    </form>
     </div>
-        <center
-</div>
-</div>
-<style media="screen">
-  #settings{
-    margin-top: 100px;
-  }
 
-</style>
-
-<script>
-    function done() {
-        document.getElementById("popup").style.display = "none";
-        var password = document.getElementById("pass").value;
-
-
-    };
-
-    function showPopup() {
-        document.getElementById("popup").style.display = "block";
-    }
-
-</script>
 </body>
 
 
